# iotManager

./: CMakeLists.txt  README.md  install.sh
files/: iotgateway  iotgateway.conf  iotscheduler
iotScheduler/: CMakeLists.txt
iotScheduler/include/: global.h  json_utils.h  load_config.h  log.h  mqttdefs.h  mqttfunc.h  schedule.h
iotScheduler/src/: config_func.c  log.c  main.c  mqttfunc.c  script.sh
iotServer/: CMakeLists.txt  script.sh
iotServer/changes/: device.h  devices.txt
iotServer/include/: event.h  global.h  list.h  log.h  mqttJsonIf.h  mqttdefs.h  mqttfunc.h  node.h  work_list.h  workqueue.h
iotServer/src/: a.c  event.c  gw_iotnode_interface.c  log.c  main.c  mqttfunc.c  workqueue.c
